Changes done in about Page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,6 +3,7 @@
     {{>nav}}
     <div class="main-content">
         {{title}}
+        Created by:- Prakhar Agrawal
     </div>        
 </body>
 {{>footer}}
